Fix left-sided jank when wrapping/unwrapping tags. Closes #2

--- a/taggy.styl
+++ b/taggy.styl
@@ -4,6 +4,9 @@
   padding 10px
   cursor text
 
+.tay-tags-before
+  margin-left -5px
+
 .tay-tag
   display inline-block
   border 1px solid #666
@@ -18,7 +21,7 @@
   cursor pointer
 
 .tay-input
-  padding 3px
+  padding 3px 3px 3px 8px
   margin 5px 0
 
   &[placeholder]
